force-app/src/objects/fferpcore__DataTransformationTable__c.object
<CustomObject>
    <customHelpPage>fferpcore__DataTransformationTableHelp</customHelpPage>
    <description>Master object in the Data Transformation Table hierarchy.  Used to transform incoming Message Delivery source data into Subscriber target data.</description>
    <fields>
        <fullName>fferpcore__DTT_Number__c</fullName>
        <displayFormat>DTT-{00000}</displayFormat>
        <label>Data Transformation Table Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>fferpcore__Description__c</fullName>
        <description>Description of this Data Transformation Table</description>
        <inlineHelpText>Description of this Data Transformation Table</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__RequiredSourceValues__c</fullName>
        <label>Required Source Values</label>
        <summarizedField>fferpcore__DataTransformation__c.fferpcore__RequiredSourceValues__c</summarizedField>
        <summaryForeignKey>fferpcore__DataTransformation__c.fferpcore__DataTransformationTable__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Data Transformation Table</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__Description__c</columns>
        <columns>fferpcore__DTT_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Data Transformation Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Transformation Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>